# interview-eval-pipeline

./: .env.example  .gitignore  1_Setup_For_HR.bat  2_Run_Evaluations.bat  DECISIONS.md  DEPLOYMENT_GUIDE.md  Procfile  README.md  SPEC.md  compare_output.csv  nixpacks.toml  pyproject.toml  requirements.txt  scoring_pipeline_spec.md  scoring_rubric.md  scoring_rubric_QA.md  scoring_rubric_SME.md  simulation_output.json
output/final_training/: batch_summary.csv
output/final_training/json_files/: cynthia-taylor-SME.json  emily-kobelenz-QA.json  leslie-duceay-QA.json
output/final_training/report_files/: cynthia-taylor-SME.html  emily-kobelenz-QA.html  leslie-duceay-QA.html
output/holdout/: batch_summary.csv
output/holdout/json_files/: maria-ferrara-QA.json  natalie-emery-SME.json
output/holdout/report_files/: maria-ferrara-QA.html  (+1 more)
output/run_1/: batch_summary.csv
output/run_2/: batch_summary.csv
output/run_3/: batch_summary.csv
output/run_4/: batch_summary.csv
scripts/: compare_prompts.py  gmail_watcher.gs  simulate_airtable_pipeline.py
sim_output/: batch_summary.csv
sim_output/json_files/: unknown-unknown-SME.json
sim_output/report_files/: unknown-unknown-SME.html
src/interview_eval/: airtable_ingest.py  airtable_pipeline.py  analyze.py  classify.py  cli.py  config.py  ingest.py  models.py  output.py  pipeline.py  server.py  transcribe.py
src/interview_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_airtable_ingest.py  test_airtable_pipeline.py  test_classify.py  test_ingest.py  test_models.py  test_output.py
(+21 files in other folders)
