[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-eval"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.92.0",
    "faster-whisper>=1.1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
interview-eval = "interview_eval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
